# remailable

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
kubes/: config.yaml  deploy.yaml  ingress.yaml  svc.yaml
src/: main.rs
