[package]
name = "remailable"
version = "0.1.0"
edition = "2021"
authors = ["Q Misell <q@magicalcodewit.ch>"]
license = "MIT"

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
futures = "0.3.26"
hex = "0.4.3"
mail-parser = "0.8.2"
reqwest = { version = "0.11.14", default_features = false, features = ["json", "native-tls-vendored", "gzip", "brotli", "deflate"] }
rocket = "0.5.0-rc.2"
rsa = "0.8.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha1 = { version = "0.10.5", features = ["oid"] }
sha2 = "0.10.6"
uuid = { version = "1.3.0", features = ["v4"] }
